--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ small{
         line-height: 26px;
     }
 }
-section#starclick {
+section#starclicks {
     display: block;
     overflow-x: auto;
     white-space: nowrap;
